--- a/Tarea1-html-css/estilo2.css
+++ b/Tarea1-html-css/estilo2.css
@@ -1,7 +1,7 @@
 /*Deben estilizar el fondo, la lista de películas, la imagen y el argumento*/
 body {
     background-color: rgb(8, 14, 10);
-    font-family: 'Courier New', Courier, monospace;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: whitesmoke;
 }
 
@@ -23,23 +23,26 @@ ol li::before {
     margin-right: 0.5rem;
     background: rgb(66, 175, 130);
     color: white;
+    font-size: larger;
+    font-weight: bolder;
     width: 1.2em;
     height: 1.2em;
-    border-radius: 50%;
     display: inline-grid;
-    place-items: center;
+    place-items: left;
     line-height: 1.2em;
 }
 
 img {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 100%;
     padding: 5px;
     width: 250px;
     margin-left: 250;
+    rotate: 90;
 }
 
 .argumento {
     max-width: 40%;
-    text-align: center;
+    text-align: justify;
+    text-indent: 40px;
 }
